fixed overflow problems

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -115,6 +115,7 @@ section {
 }
 body {
   line-height: 1;
+  overflow-x: hidden;
 }
 ol,
 ul {
